--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -83,7 +83,8 @@
     "none": "لا يوجد",
     "add": "إضافة",
     "added": "تمت الإضافة",
-    "na": "غير متاح"
+    "na": "غير متاح",
+    "confirm": "تأكيد"
   },
 
   "forgetPassword": {
