--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -83,7 +83,8 @@
     "none": "None",
     "add": "Add",
     "added": "Added",
-    "na": "N/A"
+    "na": "N/A",
+    "confirm": "Confirm"
   },
 
   "forgetPassword": {
