--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -144,6 +144,10 @@
       "name": "السجل الأكاديمي",
       "caption": "لقطة من تقدمك وإنجازاتك العظيمة."
     },
+    "pdfQA": {
+    "name": "مساعد PDF",
+    "caption": "قم بتحميل ملفات PDF واحصل على إجابات فورية لأسئلتك."
+  },
     "roadmap": {
       "name": "خريطة طريق تفاعلية",
       "caption": "تابع تقدمك وابقَ على المسار الصحيح بسهولة."
@@ -305,8 +309,28 @@
       "weak": "ضعيف",
       "veryWeak": "ضعيف جدًا"
     }
+  },
+  
+ "chatbot": {
+    "welcome_message": "مرحبًا! كيف يمكنني مساعدتك الآن",
+    "error_message": "عذرًا، حدث خطأ ما. يرجى المحاولة مرة أخرى.",
+    "default_response": "لست متأكدًا كيف أرد على ذلك. هل يمكنك إعادة صياغة سؤالك؟",
+    "you": "أنت",
+    "assistant": "ليكسى",
+    "copy": "نسخ",
+    "placeholder": "اكتب رسالتك هنا...",
+    "textarea": {
+      "hint": "اضغط Enter للإرسال، Shift+Enter لسطر جديد"
+    },
+    "send": "إرسال",
+    "disclaimer": "قد يقدم المساعد الذكي معلومات غير دقيقة عن الأشخاص أو الأماكن أو الحقائق.",
+    "chat_history": "سجل المحادثات",
+    "new_chat": "محادثة جديدة",
+    "loading_history": "جاري تحميل سجل المحادثات...",
+    "no_chat_history": "لا يوجد سجل محادثات متاح",
+    "chat_number": "المحادثة {{number}}",
+    "chat": "محادثاتك السابقة"
   }
-
 
   
 }
